ola-parser/src/testdata/syntaxTests/types/byte.sol
contract C {
    bytes1 public a;
}
// ----
// ParserError 9182: (17-21): fn, variable, struct or modifier declaration expected.
